# kalliope

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  load_dict.py
api/: CMakeLists.txt  Dockerfile  main.cpp
